508 Color Contrast error fixes

--- a/webpack/styles/widgets/_searchresults.scss
+++ b/webpack/styles/widgets/_searchresults.scss
@@ -74,7 +74,7 @@
     display: table-cell;
     width: 10%;
     text-align: center;
-    color: $light-gray;
+    color: $medium-gray;
     vertical-align: top;
     padding-top: 6px;
   }
